<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".F1">

    <RelativeLayout
        android:layout_width="414dp"
        android:layout_height="730dp"
        android:background="#439FE657"
        tools:layout_editor_absoluteX="-3dp">

        <TextView
            android:id="@+id/textVi555ew"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="167dp"
            android:layout_marginRight="167dp"
            android:layout_marginBottom="679dp"
            android:text="@string/th2"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="307dp"
            android:layout_marginRight="307dp"
            android:layout_marginBottom="548dp"
            android:background="#22AE8686"
            android:text="@string/_08_00_09_35"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="306dp"
            android:layout_marginRight="306dp"
            android:layout_marginBottom="485dp"
            android:background="#22AE8686"
            android:text="@string/_09_50_11_25"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="306dp"
            android:layout_marginRight="306dp"
            android:layout_marginBottom="420dp"
            android:background="#22AE8686"
            android:text="11:40 13:15"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="305dp"
            android:layout_marginRight="305dp"
            android:layout_marginBottom="356dp"
            android:background="#22AE8686"
            android:text="13:50 15:25"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView76"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="304dp"
            android:layout_marginRight="304dp"
            android:layout_marginBottom="291dp"
            android:background="#22AE8686"
            android:text="15:40 17:15"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="303dp"
            android:background="#0F45915B"
            android:gravity="center"
            android:text="4-4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView989"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="367dp"
            android:background="#0F45915B"
            android:gravity="center"
            android:text="100-3а"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9999"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:layout_marginBottom="564dp"
            android:background="#0F45915B"
            android:gravity="center"
            android:text="4-4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView99"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="439dp"
            android:background="#0F45915B"
            android:gravity="center"
            android:text="229-4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView89"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="503dp"
            android:background="#0F45915B"
            android:gravity="center"
            android:text="4-4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView819"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:layout_marginBottom="420dp"
            android:gravity="center"
            android:text="ЛР охрана труда "
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView821"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:layout_marginBottom="356dp"
            android:gravity="center"
            android:text="ЛР прогр ср-ва цифр обр полигр информ. Сулим"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView822"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:layout_marginBottom="482dp"
            android:gravity="center"
            android:text="ЛК Аўтаматызацыя тэхналагічных працэсаў у паліграфіі Юденков"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView820"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:layout_marginBottom="293dp"
            android:gravity="center"
            android:text="@string/_08_00"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView824"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="139dp"
            android:layout_marginRight="139dp"
            android:layout_marginBottom="548dp"
            android:gravity="center"
            android:text="@string/_08_00"
            android:textColor="#000000"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>